<resources>
    <string name="app_name">Testovoe2</string>
    <string name="start_train">START OF TRAINING</string>
    <string name="name">NAME</string>
    <string name="height">HEIGHT</string>
    <string name="weight">WEIGHT</string>
    <string name="begin">BEGIN</string>
    <string name="training">Training</string>
    <string name="analytics">ANALYTICS</string>
    <string name="settings">SETTINGS</string>
    <string name="goal_for_the_day">GOAL FOR THE DAY:</string>
    <string name="_25000">25000</string>
    <string name="points">POINTS</string>
    <string name="progress">PROGRESS:</string>
    <string name="p">P</string>
    <string name="distance_km">DISTANCE (KM)</string>
    <string name="squats_times">SQUATS (TIMES)</string>
    <string name="shots">SHOTS:</string>
    <string name="_1x">1X</string>
    <string name="insert">INSERT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_to_the_coach">QUESTION TO THE COACH</string>
    <string name="response_history">RESPONSE HISTORY</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="clear_data">CLEAR DATA</string>
</resources>