<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnalitikActivity">

    <ImageView
        android:id="@+id/imageViewFon4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:tint="#D00B1A6E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageWinSport"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:adjustViewBounds="true"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/winsport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAnalit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/analytics"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageWinSport" />

    <TextView
        android:id="@+id/textViewData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="ENTER THE DATA"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAnalit" />

    <EditText
        android:id="@+id/editTextLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/distance_km"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:inputType="number"
        android:padding="20dp"
        android:textSize="24sp"
        android:background="@drawable/rounded_edittext_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewData" />

    <EditText
        android:id="@+id/editTextPrised"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/squats_times"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:inputType="number"
        android:padding="20dp"
        android:textSize="24sp"
        android:background="@drawable/rounded_edittext_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLength" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrised">
        <TextView
            android:id="@+id/textViewShots"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.45"
            android:text="@string/shots"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="32sp" />
        <TextView
            android:id="@+id/textView1x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.55"
            android:text="@string/_1x"
            android:letterSpacing="0.2"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button_orange"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/insert"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay1" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/progressBarAnalitik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonInsert">

        <TextView
            android:id="@+id/textViewProgress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.6"
            android:text="@string/progress"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/textViewNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:text="0"
            android:textAlignment="textEnd"
            android:textColor="@color/orange"
            android:textSize="32sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/textViewP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.15"
            android:text="@string/p"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="italic|bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/progressBarAnalitik"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_centerVertical="true"
        android:progressDrawable="@drawable/custom_progress_bar_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>