<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/imageViewFon5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:tint="#D00B1A6E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageWinSport"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:adjustViewBounds="true"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/winsport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/analytics"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageWinSport" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSettings">

        <TextView
            android:id="@+id/textViewNotificate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_weight="0.8"
            android:textColor="@color/orange"
            android:text="@string/notifications"
            android:textSize="30sp"
            android:textStyle="italic|bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_one"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:layout_marginEnd="30dp"
            android:textSize="32sp"
            app:track="@drawable/custom_track"
            app:thumbTint="@color/orange"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:checked="false"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/textViewClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/orange"
        android:text="@string/clear_data"
        android:textSize="30sp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lay"/>

</androidx.constraintlayout.widget.ConstraintLayout>